--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -37,9 +37,9 @@ $avatar: "/images/me_pic.png";
 
 
 // Font stacks
-$helvetica: Helvetica, Arial, sans-serif;
-$helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$raleway: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$helvetica: "Ubuntu", Arial, sans-serif;
+$helveticaNeue: "Ubuntu", Helvetica, Arial, sans-serif;
+$raleway: "Ubuntu", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
 
 // Mobile breakpoints
