--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -250,7 +250,7 @@ button.button-primary:focus {
 	margin: 0 15px;
 	padding: 40px 0 0 0;
 	height: 80px;
-	font-family: 'Open Sans', Arial, sans-serif;
+	font-family: 'Ubuntu', Arial, sans-serif;
 	text-shadow: 
 		0 0 1px #fff, 
 		0 1px 2px rgba(0,0,0,0.3);
@@ -274,7 +274,7 @@ button.button-primary:focus {
 	font-size: 9px;
 	letter-spacing: 1px;
 	padding-top: 4px;
-	font-family: 'Open Sans', Arial, sans-serif;
+	font-family: 'Ubuntu', Arial, sans-serif;
 }
 
 .ch-info p a:hover {
