adds social media

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,16 +27,15 @@
                <p class="site-description">{{ site.description }}</p>
              </div>
              <nav>
-               <a href="{{ site.baseurl }}/">Blog</a>
-               <a href="{{ site.baseurl }}/about">About</a>
-               <a href="{{ site.baseurl }}/projects">Projects</a>
+               <a href="{{ site.baseurl }}/resume">Resume</a>
+               <a href="{{ site.baseurl }}/speaking">Speaking</a>
              </nav>
            </header>
          </div>
        </div>
        
         <div class="container">
-            <div class="space-small"></div>
+            <div class="space-tiny"></div>
            
             <div class="centered">
               <ul class="ch-grid">
@@ -47,7 +46,7 @@
                                 <div class="ch-info-front ch-img-1"></div>
                                 <div class="ch-info-back">
                                     <h3>{{site.name}}</h3>
-                                    <p></br><a href="https://linkedin.com/in/{{ site.footer-links.linkedin }}">View on LinkedIn</a></p>
+                                    <p></br><a href="https://github.com/{{ site.footer-links.github }}">View on Github</a></p>
                                 </div>	
                             </div>
                         </div>
@@ -56,7 +55,7 @@
             </ul>
         </div>
              
-             <div class="space-medium"></div>
+             <div class="space-small"></div>
             
         </div>
     </div>
