--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
                <p class="site-description">{{ site.description }}</p>
              </div>
              <nav>
-               <a href="{{ site.baseurl }}/resume">Resume</a>
+               <a href="{{ site.baseurl }}/resume.pdf" target="_blank">Resume</a>
                <a href="{{ site.baseurl }}/speaking">Speaking</a>
              </nav>
            </header>
