adds portfolio files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
              <nav>
                <a href="{{ site.baseurl }}/resume.pdf" target="_blank">Resume</a>
                <a href="{{ site.baseurl }}/speaking">Speaking</a>
+               <a href="{{ site.baseurl }}/portfolio">Portfolio</a>
              </nav>
            </header>
          </div>
