adds speaking.md

--- a/style.scss
+++ b/style.scss
@@ -76,7 +76,7 @@ a {
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
-    color: darken($link-color,20);
+    color: lighten($link-color,60);
   }
 }
 
